--- a/SourceCodePreparer/App.xaml
+++ b/SourceCodePreparer/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="SourceCodePreparer.App"
+﻿<Application x:Class="TML.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SourceCodePreparer"
+             xmlns:local="clr-namespace:TML"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
