--- a/SourceCodePreparer/MainWindow.xaml
+++ b/SourceCodePreparer/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="SourceCodePreparer.MainWindow"
+﻿<Window x:Class="TML.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SourceCodePreparer"
+        xmlns:local="clr-namespace:TML"
         mc:Ignorable="d"
         Title="TML Source Code Preparer" Width="525" SizeToContent="Height" Icon="Resources/icon.ico">
     <Window.DataContext>
